# Master-Thesis

./: Gridworld.py  README.md  notes.txt
Gazebo/thesis_ws/src/add_jeff/: CMakeLists.txt  model_plugin.cc
Gazebo/thesis_ws/src/add_jeff/launch/: spawn_jeff.launch  spawn_sdf.launch  start_test_world.launch
Gazebo/thesis_ws/src/add_jeff/models/jeff/: model.config  model.sdf
Gazebo/thesis_ws/src/add_jeff/models/jeff-angry/: model.config  model.sdf
Gazebo/thesis_ws/src/add_jeff/models/jeff-angry/meshes/: jeff3.dae
Gazebo/thesis_ws/src/add_jeff/models/jeff-happy/: model.config  model.sdf
Gazebo/thesis_ws/src/add_jeff/models/jeff-happy/meshes/: jeff2.dae
Gazebo/thesis_ws/src/add_jeff/models/jeff/meshes/: jeff.dae
Gazebo/thesis_ws/src/add_jeff/src/: Gridworld.py  QLearning_2Persons.py  Qtable.pkl  Qtable11.pkl  Qtable14.pkl  client.py  distance-face-jeff-angry.pkl  distance-face-jeff-happy.pkl  distance-face.pkl  listener.py  listener2.py  talker.py  testQL.py
Gazebo/thesis_ws/src/add_jeff/worlds/: simple_world.world  simple_world_test.world  simple_world_v2.world  simple_world_v3.world  simple_world_v4_2jeffs.world  simple_world_v5.world  simple_world_v6.world  thesis_world.world
LatexTemplate/: background.tex  conclusions.tex  contribs.tex  discussion.tex  etics.tex  introduction.tex  main.tex  method.tex  references.bib  results.tex  rw.tex  title.tex
Python/: QLearning.py  smallCNN.py
Python/CNN/: client.py  loadModel.py  predictFE.py  predictServer.py  server.py  smallCNN.py  testCNN.py  trainCNN.py
Python/Detect Eyes/: detectEye.py
(+40 files in other folders)
